--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             </div>
         </div>
     </div>
+    <!-- hello -->
     <div class="footer-color">
         <div class="footer">
             <div class="footer-title">
